--- a/package.json
+++ b/package.json
@@ -13,5 +13,13 @@
     "js-yaml": "^4.1.0",
     "chart.js": "^4.0.0",
     "pdfkit": "^0.13.0"
-  }
+  },
+  "keywords": [
+    "automation",
+    "developer-tools",
+    "productivity",
+    "open-source",
+    "viral"
+  ],
+  "author": "Ashraf Morningstar"
 }
